diaApi: changing coinhub api
